gccida/c2/get_set_constructor_bits
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5150:1: error: use of undeclared identifier 'rtunion'; did you mean 'union'?
rtunion v3; // rax 
^~~~~~~
union
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5154:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5169:1: error: must use 'union' tag to refer to type 'v3'
v3.rtwint = ( __int64)init->common.type->int_cst.rtl[6].fld[0]; 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5169:3: error: expected identifier or '('
v3.rtwint = ( __int64)init->common.type->int_cst.rtl[6].fld[0]; 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5170:22: error: use of undeclared identifier 'v3'
if ( ( *( _DWORD *)( v3.rtwint + 16) & 0x800FF) != 25 ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5172:20: error: use of undeclared identifier 'v3'
v5 = *( _QWORD *)( v3.rtwint + 40); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5175:20: error: use of undeclared identifier 'v3'
v6 = *( _QWORD *)( v3.rtwint + 32); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5176:45: error: use of undeclared identifier 'v3'
if ( v6 < 0 && ( *( _BYTE *)( *( _QWORD *)( v3.rtwint + 8) + 17LL) & 0x20) == 0 ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5183:20: error: use of undeclared identifier 'v3'
v6 = *( _QWORD *)( v3.rtwint + 32); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5281:12: error: expected expression
*( _OWORD *)( v17 + 8) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5281:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 8) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5286:19: error: expected expression
v8 = ( tree_node *)v17; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/tree.c:5286:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)v17; 
       ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_set_constructor_bits/src/obj/tree.o] Error 1
